# C---Projects

Blockchainc++/: Block.cpp  Block.h  CMakeLists.txt
Data/: AdjacencyList.cpp  AdjacencyList.h  AdjacencyMatrix.cpp  AdjacencyMatrix.h  BellmanFord.cpp  BellmanFord.h  Binary.cpp  Binary.h  BinarySearchTree.cpp  BinarySearchTree.h  CMakeLists.txt  DoublyLinkedList.cpp  DoublyLinkedList.h  LinkedList.cpp  LinkedList.h  UndirectedGraph.cpp  UndirectedGraph.h  main.cpp
Personal Assistant/: Personal Assistant.sln
Personal Assistant/Personal Assistant/: Account.cpp  Account.h  BasicVoice.cpp  BasicVoice.h  FemaleVoice.cpp  FemaleVoice.h  MaleVoice.cpp  MaleVoice.h  Personal Assistant.vcxproj  Personal Assistant.vcxproj.filters  Source.cpp  Utilities.cpp  Utilities.h  assistant.cpp  assistant.h
Personal Assistant/Personal Assistant/data/: speak.vbs
Personal Assistant/Personal Assistant/eSpeak/phsource/: compile_prog_log  error_log
algorithms/: CMakeLists.txt  main.cpp
algorithms pt2/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  FriendFunctionTest.cpp  FriendFunctionTest.h  main.cpp
